로그인 페이지, 아이디찾기, 비밀번호 찾기 페이지 html, css 작업완료

--- a/login-media.html
+++ b/login-media.html
@@ -22,6 +22,42 @@
     </div>
   </div>
   <div class="title_area"></div>
+  <div class="bottom_space">
+    <form>
+      <div class="input_idpw">
+        <div class="input_info">
+          <div class="input_info2">
+            <input data-testid="input-box" name="id" placeholder="아이디 입력" type="text"
+            class="input_content" value="">
+          </div>
+        </div>
+      <div class="input_info">
+        <div class="input_info2">
+          <input data-testid="input-box" name="password" placeholder="비밀번호 입력" type="password" autocomplete="off" class="input_content" value="">
+        </div>
+      </div>
+      </div>
+      <div class="save_area">
+        <label class="save_idarea">
+          <input type="checkbox" class="check_agree" checked="">
+          <div class="between_space">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z" fill="#5f0080"></path><path d="M7 12.6667L10.3846 16L18 8.5" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+          </div>
+          <span>아이디저장</span>
+        </label>
+      </div>
+      <div class="login_area">
+        <button class="login_button" type="submit" height="48" radius="6"><span class="side_content">로그인</span></button>
+        <button class="join_button" type="button" height="48" radius="6"><span class="join_text">회원가입</span>
+        </button>
+      </div>
+      <div class="search_area">
+        <a class="search_idt">아이디 찾기</a>
+        <span class="between_space2"></span>
+        <a class="search_idt">비밀번호 찾기</a>
+      </div>
+    </form>
+  </div>
   </div>
 </body>
 </html>
