신상밀키트page 수정-1

--- a/신상밀키트page_app/신상밀키트page.html
+++ b/신상밀키트page_app/신상밀키트page.html
@@ -60,6 +60,7 @@
           <div class="food">
             <div class="food-1">
               <div class="line">
+                <div class="count"></div>
                 <div class="line-category">
                   <div class="y1">
                     <a class="line-local.kind">
