신상밀키트page_web(지역부분만o, 종류x)

--- a/신상밀키트page_web/신상_강원도밀키트page.html
+++ b/신상밀키트page_web/신상_강원도밀키트page.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>킷캉스</title>
-  <link rel="stylesheet" href="신상밀키트page.css">
-
+  <title>강원도밀키트</title>
+  <link rel="stylesheet" href="신상_강원도밀키트page.css">
 </head>
 <body>
-<div id="wrap">
+  <div id="wrap">
     <div class="header-popup">
       <div class="header-middle">
         <a href="https://www.kurly.com/shop/event/kurlyEvent.php?htmid=event/join/join/coupon" class="a-link">
@@ -145,12 +144,8 @@
 
   <div class="rest">
     <div id="container">
-      <div class="banner">
-        <a href="https://www.kurly.com/categories/490" class="a-banner">
-          <img src="../밀키트_사진들/밀키트신상사진.png" alt="배너이미지" class="bannerimage">
-        </a>
-      </div>
-      <h3 class="newmealkit-text">신상품</h3>
+      
+      <h3 class="newmealkit-text">강원도</h3>
       <div class="filter-picture">
         <div class="filter">
           <div class="reset">
@@ -168,9 +163,10 @@
                 <li class="local-li-1">
                   <a href="신상_서울&경기밀키트page.html" class="local-a-1">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-1" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
+
                       </svg>
                     </button>
                     <span class="서울/경기">서울/경기</span>
@@ -179,7 +175,7 @@
                 <li class="local-li-2">
                   <a href="신상_인천밀키트page.html" class="local-a-2">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-2" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -190,7 +186,7 @@
                 <li class="local-li-3">
                   <a href="신상_충청도밀키트page.html" class="local-a-3">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-3" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -201,7 +197,7 @@
                 <li class="local-li-4">
                   <a href="신상_강원도밀키트page.html" class="local-a-4">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-4" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -212,7 +208,7 @@
                 <li class="local-li-5">
                   <a href="신상_전라도밀키트page.html" class="local-a-5">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-5" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -223,7 +219,7 @@
                 <li class="local-li-6">
                   <a href="신상_경상도밀키트page.html" class="local-a-6">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-6" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -234,7 +230,7 @@
                 <li class="local-li-7">
                   <a href="신상_제주도밀키트page.html" class="local-a-7">
                     <button class="check1">
-                      <svg class="check1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="check1-svg-7" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
                         <path class="p2"></path>
                       </svg>
@@ -366,7 +362,7 @@
               <div class="choice-1-1">
                 <div class="choice-1-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진1.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진7.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -379,10 +375,10 @@
                 </button>
               </div>
               <div class="choice-1-3">
-                <span class="choice-1-3span">만두전골(2인)</span>
+                <span class="choice-1-3span">제주 한라봉 크림새우(1-2인)</span>
                 <div class="choice-1-3price">
                   <div>
-                    <span>16,900원</span>
+                    <span>13,900원</span>
                   </div>
                 </div>
               </div>
@@ -392,7 +388,7 @@
               <div class="choice-2-1">
                 <div class="choice-2-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진2.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진8.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -405,10 +401,10 @@
                 </button>
               </div>
               <div class="choice-2-3">
-                <span class="choice-2-3span">감바스알아히요＆파스타</span>
+                <span class="choice-2-3span">저당 만두전골(2인)</span>
                 <div class="choice-2-3price">
                   <div>
-                    <span>18,900원</span>
+                    <span>16,900원</span>
                   </div>
                 </div>
               </div>
@@ -418,7 +414,7 @@
               <div class="choice-3-1">
                 <div class="choice-3-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진3.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진9.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -431,10 +427,10 @@
                 </button>
               </div>
               <div class="choice-3-3">
-                <span class="choice-3-3span">야끼소바(1인)</span>
+                <span class="choice-3-3span">우삼겹 비빔국수(1인)</span>
                 <div class="choice-3-3price">
                   <div>
-                    <span>4,900원</span>
+                    <span>5,900원</span>
                   </div>
                 </div>
               </div>
@@ -445,7 +441,7 @@
               <div class="choice-4-1">
                 <div class="choice-4-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진4.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진10.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -458,10 +454,10 @@
                 </button>
               </div>
               <div class="choice-4-3">
-                <span class="choice-4-3span">초계국수(1-2인)</span>
+                <span class="choice-4-3span">순살 족발과 쟁반 막국수(2인)</span>
                 <div class="choice-4-3price">
                   <div>
-                    <span>8,900원</span>
+                    <span>11,900원</span>
                   </div>
                 </div>
               </div>
@@ -471,7 +467,7 @@
               <div class="choice-5-1">
                 <div class="choice-5-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진5.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진11.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -484,10 +480,10 @@
                 </button>
               </div>
               <div class="choice-5-3">
-                <span class="choice-5-3span">얼큰한 꽃게탕(2인)</span>
+                <span class="choice-5-3span">부산식 냉채족발과 메밀면(2인)</span>
                 <div class="choice-5-3price">
                   <div>
-                    <span>14,900원</span>
+                    <span>15,900원</span>
                   </div>
                 </div>
               </div>
@@ -497,7 +493,7 @@
               <div class="choice-6-1">
                 <div class="choice-6-1detail">
                   <span>
-                    <img src="../밀키트_사진들/웹_신상밀키트사진6.jpg" alt="">
+                    <img src="../밀키트_사진들/웹_신상밀키트사진12.jpg" alt="">
                   </span>
                 </div>
               </div>
@@ -510,10 +506,10 @@
                 </button>
               </div>
               <div class="choice-6-3">
-                <span class="choice-6-3span">비프 찹스테이크(2인)</span>
+                <span class="choice-6-3span">학교 앞 기름떡볶이(1-2인)</span>
                 <div class="choice-6-3price">
                   <div>
-                    <span>15,900원</span>
+                    <span>5,900원</span>
                   </div>
                 </div>
               </div>
@@ -642,7 +638,7 @@
           </p>
         </button>
         <button class="footer-bottom-b3">
-          <img src="..밀키트_사진들/svg3.svg" alt="">
+          <img src="../밀키트_사진들/svg3.svg" alt="">
           <p>
             토스페이먼츠 구매안전(에스크로)
             <br>
@@ -671,12 +667,13 @@
   </div>
 </body>
 <script>
-  const button = document.querySelector(".x-button");
+   const button = document.querySelector(".x-button");
   const banner = document.querySelector(".header-popup");
 
   button.addEventListener("click", (e) => {
     banner.style.display = "none";
   })
+
 
   const newmealk = document.querySelector(".newmealkit");
   const hotmealk = document.querySelector(".hotmealkit");
@@ -778,9 +775,5 @@
     })
   })
 
-
-
-
-
-</script>
+  </script>
 </html>
