--- a/신상밀키트page_web/신상_경상도밀키트page.html
+++ b/신상밀키트page_web/신상_경상도밀키트page.html
@@ -217,7 +217,7 @@
                   </a>
                 </li>
                 <li class="local-li-6">
-                  <a href="신상_경상도밀키트page.html" class="local-a-6">
+                  <a href="신상밀키트page.html" class="local-a-6">
                     <button class="check1">
                       <svg class="check1-svg-6" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
