--- a/신상밀키트page_web/신상_서울&경기밀키트page.html
+++ b/신상밀키트page_web/신상_서울&경기밀키트page.html
@@ -161,7 +161,7 @@
               </button>
               <nav class="local-nav">
                 <li class="local-li-1">
-                  <a href="신상_서울&경기밀키트page.html" class="local-a-1">
+                  <a href="신상밀키트page.html" class="local-a-1">
                     <button class="check1">
                       <svg class="check1-svg-1" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
