--- a/신상밀키트page_web/신상_충청도밀키트page.html
+++ b/신상밀키트page_web/신상_충청도밀키트page.html
@@ -184,7 +184,7 @@
                   </a>
                 </li>
                 <li class="local-li-3">
-                  <a href="신상_충청도밀키트page.html" class="local-a-3">
+                  <a href="신상밀키트page.html" class="local-a-3">
                     <button class="check1">
                       <svg class="check1-svg-3" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
