--- a/추천밀키트page_web/추천_제주도밀키트page.html
+++ b/추천밀키트page_web/추천_제주도밀키트page.html
@@ -228,7 +228,7 @@
                   </a>
                 </li>
                 <li class="local-li-7">
-                  <a href="추천_제주도밀키트page.html" class="local-a-7">
+                  <a href="추천밀키트page.html" class="local-a-7">
                     <button class="check1">
                       <svg class="check1-svg-7" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
