--- a/할인밀키트page_web/할인_전라도밀키트page.html
+++ b/할인밀키트page_web/할인_전라도밀키트page.html
@@ -206,7 +206,7 @@
                   </a>
                 </li>
                 <li class="local-li-5">
-                  <a href="할인_전라도밀키트page.html" class="local-a-5">
+                  <a href="할인밀키트page.html" class="local-a-5">
                     <button class="check1">
                       <svg class="check1-svg-5" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
