--- a/신상밀키트page_web/신상_분식page.html
+++ b/신상밀키트page_web/신상_분식page.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>경상도밀키트</title>
-  <link rel="stylesheet" href="신상_경상도밀키트page.css">
+  <title>분식</title>
+  <link rel="stylesheet" href="신상_분식page.css">
 </head>
 <body>
   <div id="wrap">
@@ -145,7 +145,7 @@
   <div class="rest">
     <div id="container">
       
-      <h3 class="newmealkit-text">경상도</h3>
+      <h3 class="newmealkit-text">분식</h3>
       <div class="filter-picture">
         <div class="filter">
           <div class="reset">
@@ -217,7 +217,7 @@
                   </a>
                 </li>
                 <li class="local-li-6">
-                  <a href="신상밀키트page.html" class="local-a-6">
+                  <a href="신상_경상도밀키트page.html" class="local-a-6">
                     <button class="check1">
                       <svg class="check1-svg-6" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="p1"></path>
@@ -252,7 +252,7 @@
                 <li class="kind-li-1">
                   <a href="신상_술안주page.html" class="kind-a-1">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-1" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -263,7 +263,7 @@
                 <li class="kind-li-2">
                   <a href="신상_스테이크page.html" class="kind-a-2">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-2" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -274,7 +274,7 @@
                 <li class="kind-li-3">
                   <a href="신상_국&탕&찌개page.html" class="kind-a-3">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-3" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -283,9 +283,9 @@
                   </a>
                 </li>
                 <li class="kind-li-4">
-                  <a href="신상_분식page.html" class="kind-a-4">
+                  <a href="신상밀키트page.html" class="kind-a-4">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-4" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -296,7 +296,7 @@
                 <li class="kind-li-5">
                   <a href="신상_볶음page.html" class="kind-a-5">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-5" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -307,7 +307,7 @@
                 <li class="kind-li-6">
                   <a href="신상_조리&찜page.html" class="kind-a-6">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-6" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -318,7 +318,7 @@
                 <li class="kind-li-7">
                   <a href="신상_덮밥&비빔밥page.html" class="kind-a-7">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-7" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -329,7 +329,7 @@
                 <li class="kind-li-8">
                   <a href="신상_음료page.html" class="kind-a-8">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-8" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
@@ -340,7 +340,7 @@
                 <li class="kind-li-9">
                   <a href="신상_기타page.html" class="kind-a-9">
                     <button class="kindcheck1">
-                      <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="kindcheck1-svg-9" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
                         <path class="kindp2"></path>
                       </svg>
