--- a/할인밀키트page_web/할인밀키트page.html
+++ b/할인밀키트page_web/할인밀키트page.html
@@ -249,7 +249,7 @@
               </button>
               <nav class="kind-nav">
                 <li class="kind-li-1">
-                  <a href="https://www.google.co.kr/search?q=css+li%ED%83%9C%EA%B7%B8+%EB%B8%94%EB%9F%AD%EC%9A%94%EC%86%8C&sca_esv=558593241&sxsrf=AB5stBilsM8ThxqZqtz6OGRf_o3fAVcLpw%3A1692557242215&ei=ul_iZJHpDISxoATSpJ3gDg&ved=0ahUKEwiRrryJ8-uAAxWEGIgKHVJSB-wQ4dUDCA8&uact=5&oq=css+li%ED%83%9C%EA%B7%B8+%EB%B8%94%EB%9F%AD%EC%9A%94%EC%86%8C&gs_lp=Egxnd3Mtd2l6LXNlcnAiGWNzcyBsae2DnOq3uCDruJTrn63smpTshowyCRAhGKABGAoYKkiFG1DWB1i9GHACeAGQAQCYAYsBoAG7CqoBBDAuMTG4AQPIAQD4AQHCAgoQABhHGNYEGLADwgIGEAAYCBgewgIFECEYoAHCAgcQIRigARgKwgIEECEYCuIDBBgAIEGIBgGQBgo&sclient=gws-wiz-serp" class="kind-a-1">
+                  <a href="할인_술안주page.html" class="kind-a-1">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -260,7 +260,7 @@
                   </a>
                 </li>
                 <li class="kind-li-2">
-                  <a href="" class="kind-a-2">
+                  <a href="할인_스테이크page.html" class="kind-a-2">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -271,7 +271,7 @@
                   </a>
                 </li>
                 <li class="kind-li-3">
-                  <a href="" class="kind-a-3">
+                  <a href="할인_국&탕&찌개page.html" class="kind-a-3">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -282,7 +282,7 @@
                   </a>
                 </li>
                 <li class="kind-li-4">
-                  <a href="" class="kind-a-4">
+                  <a href="할인_분식page.html" class="kind-a-4">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -293,7 +293,7 @@
                   </a>
                 </li>
                 <li class="kind-li-5">
-                  <a href="" class="kind-a-5">
+                  <a href="할인_볶음page.html" class="kind-a-5">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -304,7 +304,7 @@
                   </a>
                 </li>
                 <li class="kind-li-6">
-                  <a href="" class="kind-a-6">
+                  <a href="할인_조리&찜page.html" class="kind-a-6">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -315,7 +315,7 @@
                   </a>
                 </li>
                 <li class="kind-li-7">
-                  <a href="" class="kind-a-7">
+                  <a href="할인_덮밥&비빔밥page.html" class="kind-a-7">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -326,7 +326,7 @@
                   </a>
                 </li>
                 <li class="kind-li-8">
-                  <a href="" class="kind-a-8">
+                  <a href="할인_음료(주류포함)page.html" class="kind-a-8">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
@@ -337,7 +337,7 @@
                   </a>
                 </li>
                 <li class="kind-li-9">
-                  <a href="" class="kind-a-9">
+                  <a href="할인_기타page.html" class="kind-a-9">
                     <button class="kindcheck1">
                       <svg class="kindcheck1-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="kindp1"></path>
