--- a/신상밀키트상세page_web/신상_3상세page.html
+++ b/신상밀키트상세page_web/신상_3상세page.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>신상1</title>
-  <link rel="stylesheet" href="신상_1상세page.css">
+  <title>신상3</title>
+  <link rel="stylesheet" href="신상_3상세page.css">
 
 </head>
 <body>
@@ -150,11 +150,11 @@
         <section class="main-section">
           <div class="main-section-1">
             <div>
-              <h1>만두전골(2인)</h1>
+              <h1>야끼소바(1인)</h1>
             </div>
           </div>
           <h2>
-            <span>16,900원</span>
+            <span>4,900원</span>
           </h2>
           <div class="main-section-2">
             <dl class="dl-1">
@@ -220,50 +220,50 @@
                       <li class="extra-li1">
                         <div class="extra-div1">
                           <p class="extra-p">
-                            <span>만두전골-아주순한맛<span>
+                            <span>야끼소바(1인)-아주순한맛<span>
                           </p>
                           <div class="extra-div2">
-                            <div>16,900원</div>
+                            <div>4,900원</div>
                           </div>
                         </div>
                       </li>
                       <li class="extra-li1">
                         <div class="extra-div1">
                           <p class="extra-p">
-                            <span>만두전골-순한맛</span>
+                            <span>야끼소바(1인)-순한맛</span>
                           </p>
                           <div class="extra-div2">
-                            <div>16,900원</div>
+                            <div>4,900원</div>
                           </div>
                         </div>
                       </li>
                       <li class="extra-li1">
                         <div class="extra-div1">
                           <p class="extra-p">
-                            <span>만두전골-보통맛</span>
+                            <span>야끼소바(1인)-보통맛</span>
                           </p>
                           <div class="extra-div2">
-                            <div>16,900원</div>
+                            <div>4,900원</div>
                           </div>
                         </div>
                       </li>
                       <li class="extra-li1">
                         <div class="extra-div1">
                           <p class="extra-p">
-                            <span>만두전골-매운맛</span>
+                            <span>야끼소바(1인)-매운맛</span>
                           </p>
                           <div class="extra-div2">
-                            <div>16,900원</div>
+                            <div>4,900원</div>
                           </div>
                         </div>
                       </li>
                       <li class="extra-li1">
                         <div class="extra-div1">
                           <p class="extra-p">
-                            <span>만두전골-아주매운맛</span>
+                            <span>야끼소바(1인)-아주매운맛</span>
                           </p>
                           <div class="extra-div2">
-                            <div>16,900원</div>
+                            <div>4,900원</div>
                           </div>
                         </div>
                       </li>
