--- a/신상밀키트page.html
+++ b/신상밀키트page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>킷캉스</title>
-  <link rel="stylesheet" href="신상밀키트page.css?after">
+  <link rel="stylesheet" href="신상밀키트page.css">
 </head>
 <body>
   <div id="wrap">
