newmealkit- 이벤트 추가

--- a/신상밀키트상세page_web/로그인x찜클릭page.html
+++ b/신상밀키트상세page_web/로그인x찜클릭page.html
@@ -12,7 +12,7 @@
     }
   </style> -->
 </head>
-<body>
+<body onclick="dele()">
 <div id="wrap">
     <div class="header-popup">
       <div class="header-middle">
@@ -616,9 +616,11 @@
     ok.style.display = 'none';
     body.classList.remove("body");
 
-    
+
 
   }
+
+
 
 
 </script>
